@@ -30,4 +30,5 @@
 void bind_image(int type, SV *parenturl, struct Multi_String url,
 				GLuint *texture_num,
 				int repeatS,
-				int repeatT);
+				int repeatT,
+				GLint mode);
